--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header{
     padding: 20px;
 }
 
+
 header > h1{
     color: #25272e;
     text-align: center;
@@ -90,4 +91,20 @@ header > h1{
     color: white;
     font-weight: bold;
     font-size: 20px;
+}
+
+.green-glow{
+    border: 4px solid #4dcc7d;
+    box-shadow: 0 0 10px #31b43a; 
+    /* holozontal, vertical, blur, color onset */
+}
+
+.red-glow{
+    border: 4px solid #fc121b;
+    box-shadow: 0 0 10px #d01115;
+}
+
+.gray-glow{
+    border: 4px solid #464647;
+    box-shadow: 0 0 10px #25292b;
 }
